14-Kubernetes_sec/14.5/example-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-for-nwtool
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: nwtool
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
       cidr: 10.233.92.33/32
  egress:
  - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-for-mypod
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: nwtool
    ports:
    - protocol: TCP
      port: 80    
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: nwtool
